# freqai-foundry-strategies

./: .editorconfig  .gitignore  AGENTS.md  README.md  WSL_WINDOWS_GPU_RUNBOOK.md  renovate.json
.github/: copilot-instructions.md
.opencode/: opencode.jsonc
.opencode/command/: commit.md
.serena/: project.yml
ReforceXY/: Dockerfile  docker-compose.windows-gpu.yml  docker-compose.wsl-top30-dualrun.yml  docker-compose.wsl-top30-optuna.yml  docker-compose.yml
ReforceXY/.devcontainer/: devcontainer.json  docker-compose.dev.yml
ReforceXY/reward_space_analysis/: README.md  pyproject.toml  reward_space_analysis.py  test_reward_space_analysis_cli.py
ReforceXY/reward_space_analysis/tests/: .docstring_template.md  README.md  __init__.py  conftest.py  constants.py  test_base.py
ReforceXY/reward_space_analysis/tests/api/: test_api_helpers.py
ReforceXY/reward_space_analysis/tests/cli/: test_cli_params_and_csv.py
ReforceXY/reward_space_analysis/tests/components/: test_additives.py  test_reward_components.py
ReforceXY/reward_space_analysis/tests/helpers/: __init__.py  assertions.py  configs.py  test_internal_branches.py  test_utilities.py  warnings.py
ReforceXY/reward_space_analysis/tests/integration/: test_integration.py  test_report_formatting.py  test_reward_calculation.py
ReforceXY/reward_space_analysis/tests/pbrs/: test_pbrs.py
ReforceXY/reward_space_analysis/tests/robustness/: test_branch_coverage.py  test_robustness.py
ReforceXY/reward_space_analysis/tests/statistics/: test_feature_analysis_failures.py  test_statistics.py
ReforceXY/reward_space_analysis/tests/transforms/: test_transforms.py
ReforceXY/user_data/: config-template.json  config.optuna.json
ReforceXY/user_data/backtest_results/: .gitignore
ReforceXY/user_data/freqaimodels/: ReforceXY.py
ReforceXY/user_data/strategies/: RLAgentStrategy.py
configs/: pairlist-static-bybit-futures-usdt-top30.json
openspec/: config.yaml
quickadapter/: Dockerfile  docker-compose.windows-gpu.yml  docker-compose.wsl-top30-dualrun.yml  docker-compose.wsl-top30-optuna.yml  docker-compose.yml
quickadapter/.devcontainer/: devcontainer.json  docker-compose.dev.yml  requirements-dev.txt
quickadapter/user_data/: backtest_static_pairs.json  config-template.json  config.backtest-balanced.json  config.backtest-fast.json  config.dryrun-wsl-allpairs.json  config.dryrun-wsl-top30-dualrun.json  config.dryrun-wsl.json  config.optuna-wsl-top30.json  config.windows-gpu.json
quickadapter/user_data/freqaimodels/: QuickAdapterRegressorV3.py
quickadapter/user_data/strategies/: LabelTransformer.py  QuickAdapterV3.py  Utils.py  config_multi.json
scripts/: docker-upgrade.sh  trade_report.py  upgrade-all.sh
