[project]
name = "reward_space_analysis"
version = "0.1.0"
description = "Reward space analysis for ReforceXY trading strategy"
authors = [
    {name = "Jerome Benoit", email = "jerome.benoit@piment-noir.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas",
    "scikit-learn",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "."
]
python_files = [
    "test_*.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
markers = [
    "components: component-level reward computations",
    "transforms: mathematical transform functions",
    "robustness: stress and edge-case behavior",
    "api: public API surface and helpers",
    "cli: command-line interface behaviors",
    "statistics: statistical aggregation and metrics",
    "pbrs: potential-based reward shaping specifics",
    "integration: cross-module integration scenarios",
    "slow: resource-intensive or long-running tests",
    "smoke: non-owning smoke tests for early regression detection"
]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--color=yes",
    "--cov",
]

[tool.coverage.run]
source = ["reward_space_analysis"]
branch = true
parallel = true
relative_files = true
omit = [
    "*/tests/*",
    "**/test_*.py",
    "**/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long
]

[tool.ruff.lint.isort]
known-first-party = ["reward_space_analysis"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
